# neves-be

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  conftest.py  db.sqlite3  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  justfile  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
compose/local/django/: Dockerfile
compose/production/aws/: Dockerfile
compose/production/django/: Dockerfile
compose/production/traefik/: traefik.yml
config/: urls.py  wsgi.py
config/api/: urls.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
neves_be/: conftest.py
neves_be/api/: apps.py  serializers.py  urls.py  views.py
neves_be/api/tests/: test_radicals_api.py
neves_be/common/: api.py  exception_handlers.py  exceptions.py  middleware.py  serializers.py
neves_be/contrib/sites/migrations/: 0001_initial.py  0003_set_site_domain_and_name.py
neves_be/language_model/: apps.py  models.py  serializers.py  types.py
neves_be/language_model/management/commands/: clusterize_sentences.py  import_mcc2lm.py
neves_be/language_model/migrations/: 0001_initial.py  0002_maskedsentenceaudio_alter_word_occurrences.py  0003_rename_maskedsentenceaudio_generatedspeech.py  0004_translation.py
neves_be/language_model/services/: audio_cmn.py  mcc2lm_helpers.py  mcc2lm_imports.py  pinyin_to_tone.py  text2speech.py  translation.py
neves_be/practice_assesments/: apps.py  constants.py  models.py  types.py
neves_be/practice_assessments/: apps.py  constants.py  exceptions.py  models.py  serializers.py  types.py  urls.py  views.py
neves_be/practice_assessments/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_delete_maskedsentenceaudio.py
neves_be/practice_assessments/services/: assessments.py  chr2rdc_questions.py  masked_sentence_audio.py  questions.py  radical_questions.py  radicals.py  sentences.py  snt2wrd_questions.py
neves_be/practice_assessments/services/factories/: base.py  radicals.py  sentences.py  utils.py
neves_be/practice_questions/: apps.py  models.py  urls.py  views.py
neves_be/practice_questions/migrations/: 0001_initial.py
neves_be/practice_sessions/: apps.py  exceptions.py  models.py  serializers.py  services.py  types.py  urls.py  views.py
neves_be/practice_sessions/services/: base.py  radicals.py  sentences.py  utils.py
neves_be/radical_assesments/: apps.py  models.py  serializers.py  services.py  types.py  urls.py  views.py
neves_be/radical_sessions/: admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  types.py  urls.py  views.py
neves_be/radical_sessions/api/: urls.py
neves_be/radical_sessions/migrations/: 0001_initial.py  0002_initial.py  0002_remove_radicalsessiontest_session_and_more.py  0003_alter_radicalsessionradical_radical.py
neves_be/radical_sessions/tests/: test_api.py
neves_be/radical_tests/: admin.py  apps.py  models.py  serializers.py  services.py  types.py  views.py
neves_be/radical_tests/api/: urls.py
neves_be/radical_tests/migrations/: 0001_initial.py
neves_be/radical_tests/tests/: test_api.py
neves_be/radicals/: admin.py  apps.py  models.py  serializers.py
neves_be/radicals/management/commands/: import_mcc2lm.py
neves_be/radicals/migrations/: 0001_initial.py  0002_alter_radicalsessiontestquestion_curr_answer.py  0003_remove_radicalsession_user_and_more.py  0004_alter_radical_meaning_alter_radical_pinyin_and_more.py  0005_alter_radicallogogrammap_radical.py
neves_be/radicals/services/: mcc2lm_helpers.py  mcc2lm_imports.py
neves_be/sentence_assesments/: apps.py  models.py  serializers.py  services.py  types.py  urls.py  views.py
neves_be/sentence_session_sentences/: apps.py  urls.py  views.py
neves_be/sentence_sessions/: apps.py  models.py  serializers.py  services.py  types.py  urls.py  views.py
neves_be/sentence_sessions/migrations/: 0001_initial.py  0002_initial.py
neves_be/templates/: base.html
neves_be/templates/allauth/layouts/: entrance.html  manage.html
neves_be/templates/users/: user_detail.html
neves_be/users/: adapters.py  apps.py  context_processors.py  models.py  urls.py  views.py
neves_be/users/api/: urls.py
neves_be/users/migrations/: 0001_initial.py
neves_be/users/tests/: test_admin.py  test_models.py  test_urls.py  test_views.py
radicals/: admin.py  apps.py  models.py
radicals/management/commands/: import_mcc2lm.py
radicals/migrations/: 0001_initial.py
scripts/: cleancache.sh  djangobash.sh  verify.sh
tests/common/: test_error_logging.py
tests/radical_sessions/: test_api.py
tests/radical_tests/: test_api.py
tests/users/: factories.py  test_admin.py  test_api.py  test_forms.py  test_models.py  test_views.py
