[project]
name = "neves-be"
version = "0.1.0"
description = "Back end for the neves project."
readme = "README.md"
license = { text = "GPLv3" }
authors = [
  { name = "Lucas Calegario", email = "lucas.c.calegario@outlook.com" },
]
requires-python = "==3.14.*"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "argon2-cffi==25.1.0",
  "collectfasta==3.3.3",
  "crispy-bootstrap5==2026.3",
  "django==6.0.6",
  "django-cors-headers==4.3.1",
  "django-crispy-forms==2.6",
  "django-environ==0.14.0",
  "django-model-utils==5.0.0",
  "django-redis==7.0.0",
  "django-storages[s3]==1.14.6",
  "djangorestframework==3.16.1",
  "gunicorn==26.0.0",
  "hiredis==3.4.0",
  "pillow==12.2.0",
  "psycopg[c]==3.3.4",
  "python-slugify==8.0.4",
  "redis==8.0.0",
]

[dependency-groups]
dev = [
  "coverage==7.14.2",
  "django-coverage-plugin==3.2.2",
  "django-debug-toolbar==7.0.0",
  "django-extensions==4.1",
  "django-stubs[compatible-mypy]==6.0.5",
  "djlint==1.39.2",
  "factory-boy==3.3.3",
  "ipdb==0.13.13",
  "mypy==2.1.0",
  "pre-commit==4.6.0",
  "psycopg[c]==3.3.4",
  "pytest==9.1.1",
  "pytest-django==4.12.0",
  "pytest-sugar==1.1.1",
  "ruff==0.15.18",
  "sphinx==9.1.0",
  "sphinx-autobuild==2025.8.25",
  "werkzeug[watchdog]==3.1.8",
]
mining = [
  "scikit-learn>=1.9.0",
]

# ==== djLint ====
[tool.djlint]
profile = "django"
include = "H017,H035"
indent = 2
max_line_length = 119
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/djlint/djLint/issues/687
ignore = "H006,H030,H031,T002"
css.indent_size = 2
js.indent_size = 2

# ==== ruff ====
[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
  "*/migrations/*.py",
  "staticfiles/*",
]
lint.select = [
  "A",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "DJ",
  "DTZ",
  "E",
  "EM",
  "ERA",
  "EXE",
  "F",
  "FA",
  "FBT",
  "FLY",
  "G",
  "I",
  "ICN",
  "INP",
  "INT",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLF",
  "SLOT",
  "T10",
  "T20",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "S101",   # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  # of types for comparison.
  # Deactivated because it can make the code slow:
  # https://github.com/astral-sh/ruff/issues/7871
  "S311",   # Random is useful unless used for cryptography,
  "SIM102"
]
lint.exclude = [ "**/migrations/*.py", "config", "manage.py", "tests" ]
lint.isort.force-single-line = true
lint.pylint.max-statements = 30

# ==== pyproject-fmt ====
[tool.pyproject-fmt]
keep_full_version = true

# ==== mypy ====
[tool.mypy]
ignore_missing_imports = true
python_version = "3.14"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = [
  "mypy_django_plugin.main",
]
warn_unused_configs = true
overrides = [
  # Django migrations should not produce any errors:
  { module = "*.migrations.*", ignore_errors = true },
]

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== pytest ====
[tool.pytest]
addopts = [
  "--ds=config.settings.test",
  "--reuse-db",
  "--import-mode=importlib",
]
minversion = "9.0"
python_files = [
  "tests.py",
  "test_*.py",
]

[tool.coverage]
# ==== Coverage ====
run.include = [ "neves_be/**" ]
run.omit = [ "*/migrations/*", "*/tests/*" ]
run.plugins = [ "django_coverage_plugin" ]
